--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-APIFY_LOCAL_STORAGE_DIR="DATA"
+APIFY_LOCAL_STORAGE_DIR=DATA
+APIFY_TOKEN=apify_api_5mG2h8Y0luWnS1sdVeS11tMqIsDiUq49xshv
+GOSTIFY_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwYXlsb2FkIjoiSG9sZGVyLUJpbmciLCJpYXQiOjE3MjAyODgzMTV9.93dgbyI9PRkzPf8GoxZIT88U74YUD2cTw_4EM-DyXPc
